--- a/index.html
+++ b/index.html
@@ -109,18 +109,18 @@
     <p class="ex1">
       <pre id="History_InText">
     Originally deep-sea exploration was conducted by submersibles, these vehicles were designed to be manned by a small number of passengers and often had to be connected to a ship via a fiber optic cable which transferred
-    the array of data that was collected. This technology, whilst effective during the emergence of deep-sea exploration, soon became ineffective with the invention of ROVS (Remotely operated Vehicles). ROVS removed the time
-    limitations created by the human passengers and decreased the risk of human harm, allowing vehicles to reach deeper and more remote areas. <a href="#(Marranzino, 2017)"><I>(Marranzino, 2017)</I></a>. However, due to the use of the fiber optic umbilical cord
-    that attached to these types of machines transmitting data to a ship, maneuverability and adaptability was reduced. This led to the development of Autonomous Underwater Vehicles (AUVS) which are highly maneuverable, 
-    self-propelled and must be mapped to a specific path using code. AUVS are also used cooperatively with other vehicles to create a large system for exploration that is more cost effective and efficient. <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c.
-    et al. (2023))</I></a>.
+    the array of data that was collected. This technology, whilst effective during the emergence of deep-sea exploration, soon became ineffective with the invention of ROVS (Remotely operated Vehicles). ROVS removed the 
+    time limitations created by the human passengers and decreased the risk of human harm, allowing vehicles to reach deeper and more remote areas. <a href="#(Marranzino, 2017)"><I>(Marranzino, 2017)</I></a>. However, due to the use of the fiber optic 
+    umbilical cord that attached to these types of machines transmitting data to a ship, maneuverability and adaptability was reduced. This led to the development of Autonomous Underwater Vehicles (AUVS) which are highly 
+    maneuverable, self-propelled and must be mapped to a specific path using code. AUVS are also used cooperatively with other vehicles to create a large system for exploration that is more cost effective and efficient. 
+    <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c. et al. (2023))</I></a>.
 
     To ensure these vehicles can survive the extreme pressures of the ocean the material had to also be developed, creating a material that is strong and durable whilst also ensuring the vehicle is light weight was a 
     necessity in the production of these vehicles as it ensures they are maneuverable and can effectively function when acted upon by higher pressures. The use of light composite materials combined with a type of high 
     strength metal such as steel or aluminum is currently a popular solution for creating a pressure resistant hull. Materials such as stainless steel and Aluminum are used over an array of other materials due to their 
     strength but also because the corrosion rate of these materials decreases with the depth, ensuring these materials are highly durable. This reaction occurs due to the decrease in both temperature level and oxygen. 
-    <a href="#(Chen, s. et, al. (2021))"><I>(chen, s. et, al. (2021))</I></a> This, however, also had its faults as composite materials vary in quality during construction and are also very expensive to produce. The use
-    of pressure resistant hulls as well as being expensive, greatly reduces maneuverability and hence adaptability of underwater vehicles. This is due to the hulls large size and weight. <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c. et al. (2023))</I></a>
+    <a href="#(Chen, s. et, al. (2021))"><I>(chen, s. et, al. (2021))</I></a> This, however, also had its faults as composite materials vary in quality during construction and are also very expensive to produce. The use of pressure resistant 
+    hulls as well as being expensive, greatly reduces maneuverability and hence adaptability of underwater vehicles. This is due to the hulls large size and weight. <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c. et al. (2023))</I></a>
 
       </pre>  
   </p>
