--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       
     <p style="font-size: 2px">
       <pre id="Figure_InText">
-    Figure 1 – Examples of the type of mechanisms affected by the development of soft technology (Bioinspired soft robots for deep-sea exploration, 2023) 
+    Figure 1 – Examples of the type of mechanisms affected by the development of soft technology <a href="#(Bioinspired soft robots for deep-sea exploration, 2023)"><I>(Bioinspired soft robots for deep-sea exploration, 2023)</I></a>
       </pre>
     </p>
       
@@ -168,7 +168,7 @@
 <pre id="(NOAA, 2024)">-National oceanic and atmospheric administration (2024) World-Oceans-Day. Available at: https://oceanexplorer.noaa.gov/world-oceans-day/reason-1.html (Accessed: 29/10/24).</a>
 
          <a href=" https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png">
--springernature (2023) 'Bioinspired soft robots for deep-sea exploration' Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png 
+<pre id="(Bioinspired soft robots for deep-sea exploration, 2023)">-springernature (2023) 'Bioinspired soft robots for deep-sea exploration' Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png 
  (Accessed: 13/11/2024).</a>
 
          <a href="https://www.science.org/doi/10.1126/scirobotics.aax5425">
