--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     necessity in the production of these vehicles as it ensures they are maneuverable and can effectively function when acted upon by higher pressures. The use of light composite materials combined with a type of high 
     strength metal such as steel or aluminum is currently a popular solution for creating a pressure resistant hull. Materials such as stainless steel and Aluminum are used over an array of other materials due to their 
     strength but also because the corrosion rate of these materials decreases with the depth, ensuring these materials are highly durable. This reaction occurs due to the decrease in both temperature level and oxygen. 
-    <a href="#(Chen, s. et, al. (2021))"><I>(chen, s. et, al. (2021))</I></a> This, however, also had its faults as composite materials vary in quality during construction and are also very expensive to produce. The use of pressure resistant 
-    hulls as well as being expensive, greatly reduces maneuverability and hence adaptability of underwater vehicles. <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c. et al. (2023))</I></a>. These pressure resistant designs also include risks such as
-    structural failure. This risk was demonstrated through the incident involving the Nereus HROV where the vessel imploded at a depth of 9900m. <a href="#(Li, Guorui. Et al. (2023))"><I>(Li, Guorui. Et al. (2023)).</I></a>
+    <a href="#(Chen, s. et, al. (2021))"><I>(chen, s. et, al. (2021))</I></a> This, however, also had its faults as composite materials vary in quality during construction and are also very expensive to produce. The use of pressure resistant hulls as well 
+    as being expensive, greatly reduces maneuverability and hence adaptability of underwater vehicles. <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c. et al. (2023))</I></a>. These pressure resistant designs also include risks such as structural failure. 
+    This risk was demonstrated through the incident involving the Nereus HROV where the vessel imploded at a depth of 9900m. <a href="#(Li, Guorui. Et al. (2023))"><I>(Li, Guorui. Et al. (2023)).</I></a>
 
       </pre>  
   </p>
