--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     The world's oceans present a vast and resource rich environment, this as well as the huge area of ocean that remains unexplored, 95% <a href="#(NOAA, 2024)"><I>(NOAA, 2024)</I></a>, creates an alluring field where both technology and knowledge can be 
     developed. This, however, due to the extreme pressures produced by the different depths of the oceans, has required the development of technology such as unmanned vessels and pressure resistant hulls <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c.
     et al. (2023))</I></a>. These developments, however, were also accompanied by a range of limitations such as increased weight and reduced adaptability, this led to the further development of technology to produce soft bodied
-    mechanisms. Contrary to previous technology these soft robots enable delicate interactions with different specimens and provide a superior level of adaptability, <a href="#(Li, Guorui. Et al. (2023))"><I>(Li, Guorui. Et al. (2023)).</I></a>
+    mechanisms. Contrary to previous technology these soft robots enable delicate interactions with different specimens and provide a superior level of adaptability, <a href="#(Guorui, L. Et al. (2023))"><I>(Guorui, L. Et al. (2023)).</I></a>
       </pre>
   </p>
     
@@ -121,7 +121,7 @@
     strength but also because the corrosion rate of these materials decreases with the depth, ensuring these materials are highly durable. This reaction occurs due to the decrease in both temperature level and oxygen. 
     <a href="#(Chen, s. et, al. (2021))"><I>(chen, s. et, al. (2021))</I></a> This, however, also had its faults as composite materials vary in quality during construction and are also very expensive to produce. The use of pressure resistant hulls as well 
     as being expensive, greatly reduces maneuverability and hence adaptability of underwater vehicles. <a href="#( Weicheng, c. et al. (2023))"><I>( Weicheng, c. et al. (2023))</I></a>. These pressure resistant designs also include risks such as structural failure. 
-    This risk was demonstrated through the incident involving the Nereus HROV where the vessel imploded at a depth of 9900m. <a href="#(Li, Guorui. Et al. (2023))"><I>(Li, Guorui. Et al. (2023)).</I></a>
+    This risk was demonstrated through the incident involving the Nereus HROV where the vessel imploded at a depth of 9900m.  <a href="#(Guorui, L. Et al. (2023))"><I>(Guorui, L. Et al. (2023)).</I></a>
 
       </pre>  
   </p>
