--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
  Available at: https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536 (Accessed: 29/10/24).</a>
 
       <a href="https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals">
-<pre id="(Li, Guorui. Et al. (2023))">-Guorui, L. et al. (2023) 'Bioinspired soft robots for deap-sea exploration', Nature communications, 14(1),  
+<pre id="(Guorui, L. Et al. (2023))">-Guorui, L. et al. (2023) 'Bioinspired soft robots for deap-sea exploration', Nature communications, 14(1),  
  Available at : https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals (Accessed: 13/11/24) .</a>
 
       <a href="https://oceanbites.org/ocean-tech-using-robots-to-conduct-deep-sea-research/">
