--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 
       <p class="ex1">
         <pre>
-    This paper is a paper that is a work in progress. Hope whoever is reading this is having an amazing day. The rest of this text is just waffle to ensure the placeholder paragraph takes up a larger number of lines. 
-    An abstract is a brief summary of a text Max (150 words). A mini version of the paper and must be completely seperate to the rest of the paper. Include a background - why am i writing this?, Purpose of study, 
-    method, conclusion.
+    The exploration of the deep-sea is a field that has widely developed both technology and knowledge through the vast array of challenges that the oceans colossal pressure and temperature provides. Unlike
+    the heavy pressure resistant robots manufactured by humans, deep-sea organisms thrive in these extremes, demonstrating an array of survival adaptations and techniques that scientists have been inspired to
+    develop as their own. This perspective communicates the history of ocean exploring vessels and how the use of soft mechanisms has been developed to create a superior method of deep-sea exploration.  
         </pre>
   </p>
     
