--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       </pre> 
   </p>
     
-   <figure>
+   <figure align="centre">
      <img src="SoftGrippersExample.png" alt="Figure displaying examples of soft gripper" width="1000" height="400"
    </figure>
 
