--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
     <p class="ex1">
       <pre id="SoftBodiedDevelopment_InText">
     Consequently, scientists adopted the research of deep-sea organisms for inspiration. The deep-sea environment provides a range of abilities and survival characteristics, such as pressure resilience and mobility 
-    (Guorui, L. Et al. (2023)), that scientists could study and experiment with, exploring the extreme mechanical adaptations that these organisms provided. (Feng, J-C. et al, (2022)). Primarily the collection of deep-sea
+    <a href="#(Guorui, L. Et al. (2023))"><I>(Guorui, L. Et al. (2023)).</I></a>, that scientists could study and experiment with, exploring the extreme mechanical adaptations that these organisms provided. <a href="#(Feng, J-C. et al, (2022))"><I>(Feng, J-C. et al, (2022))</I></a>. Primarily the collection of deep-sea
     samples to study was extremely challenging. Most deep-sea organisms consisted of a gelatinous type of structure with tissue of extremely low stiffness. This created a challenge as previous methods of obtaining these
-    samples such as nets or vacuum devices often damaged the sample. (Sinatra N et al, 2019). This influenced the development of a soft gripper that has control over the force it applies and can also manipulate their shape
+    samples such as nets or vacuum devices often damaged the sample.<a href="#(Sinatra, N. et al. (2019))"><I>(Sinatra, N. et al. (2019))</I></a>. This influenced the development of a soft gripper that has control over the force it applies and can also manipulate their shape
     depending on the geometry of the object it is handling. An example of this type of mechanism for the use of deep-sea research was the Fin Ray effect soft gripper, inspired by the design of a fish’s fin. These grippers
-    are soft and triangular and usebuckling cross beams to conform around an object as shown in figure 1. (Yao, J. et al. (2024)).
+    are soft and triangular and usebuckling cross beams to conform around an object as shown in figure 1. <a href="#(Yao, J. et al. (2024))"><I>(Yao, J. et al. (2024))</I></a>.
       </pre> 
   </p>
     
@@ -154,7 +154,7 @@ With these soft grippers researchers now had access to a wider range of organism
 muscle. These muscles act against the pressure of the fluid to generate movement, or muscular hydrostats which consists of a structure of highly dense muscles which provide skeletal support to the organism. Examples of 
 these organisms are snailfish or octopuses, these provided the inspiration for the development of mechanics such as muscle like actuators, these created a soft mechanism with movement that could withstand high pressures,
 or hydraulic jamming grippers which provide a greater force allowing these mechanisms to interact with larger or heavier objects. Further examples of soft bodied mechanisms are shown in Figure 2 and 3 below. 
-(Guorui, L. Et al. (2023)).
+<a href="#(Guorui, L. Et al. (2023))"><I>(Guorui, L. Et al. (2023)).</I></a>.
       </pre>
    </p>
      
@@ -180,7 +180,6 @@ stages of development, soft bodied mechanisms create a massive potential for the
 <h3 id="References">References</h3>
     <p class="ex2">
       <pre id="References_InText">
-
       <a href="https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536">
  <pre id="(Chen, s. et, al. (2021))">-Chen, s. et, al. (2021) 'Research progress on corrosion of equipment and materials in Deep-sea environment', Advances in civil engineering, 2021(1), 
  Available at: https://onlinelibrary.wiley.com/doi/10.1155/2021/7803536 (Accessed: 29/10/24).</a>
