--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     Consequently, scientists adopted the research of deep-sea organisms for inspiration. The deep-sea environment provides a range of abilities and survival characteristics, such as pressure resilience and mobility 
     <a href="#(Guorui, L. Et al. (2023))"><I>(Guorui, L. Et al. (2023)).</I></a>, that scientists could study and experiment with, exploring the extreme mechanical adaptations that these organisms provided. <a href="#(Feng, J-C. et al, (2022))"><I>(Feng, J-C. et al, (2022))</I></a>. Primarily the collection of deep-sea
     samples to study was extremely challenging. Most deep-sea organisms consisted of a gelatinous type of structure with tissue of extremely low stiffness. This created a challenge as previous methods of obtaining these
-    samples such as nets or vacuum devices often damaged the sample.<a href="#(Sinatra, N. et al. (2019))"><I>(Sinatra, N. et al. (2019))</I></a>. This influenced the development of a soft gripper that has control over the force it applies and can also manipulate their shape
-    depending on the geometry of the object it is handling. An example of this type of mechanism for the use of deep-sea research was the Fin Ray effect soft gripper, inspired by the design of a fish’s fin. These grippers
-    are soft and triangular and usebuckling cross beams to conform around an object as shown in figure 1. <a href="#(Yao, J. et al. (2024))"><I>(Yao, J. et al. (2024))</I></a>.
+    samples such as nets or vacuum devices often damaged the sample.<a href="#(Sinatra, N. et al. (2019))"><I>(Sinatra, N. et al. (2019))</I></a>. This influenced the development of a soft gripper that has control over the force it applies and can also manipulate their 
+    shape depending on the geometry of the object it is handling. An example of this type of mechanism for the use of deep-sea research was the Fin Ray effect soft gripper, inspired by the design of a fish’s fin. These 
+    grippers are soft and triangular and use buckling cross beams to conform around an object as shown in figure 1. <a href="#(Yao, J. et al. (2024))"><I>(Yao, J. et al. (2024))</I></a>.
       </pre> 
   </p>
     
@@ -174,6 +174,7 @@ Figure 2 –<a href="#(Bioinspired soft robots for deep-sea exploration, 2023)">
 In conclusion the development of soft bodied mechanisms has revolutionized deep-sea exploration due to the increase in adaptability of these mechanisms. The use of these mechanics allows a submersible to reach and 
 progress effectively within extreme pressure depths. As well as this the advancement in soft gripper technology created a new field of discovery that previously had been impossible. Whilst still being in the early
 stages of development, soft bodied mechanisms create a massive potential for the future of deep-sea exploration.
+  
 </pre>  
 </p>
     
