--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@ Mechanism and machine theory, 191, Available at: https://www.sciencedirect.com/s
     // Calculate word count for each section and accumulate the total
     const IntroductionCount = displayWordCount("Introduction_InText");
     const HistoryCount = displayWordCount("History_InText");
-    const DevelopmentCount = displayWordCount("Development_InText");
+    const SoftBodiedDevelopmentCount = displayWordCount("SoftBodiedDevelopment_InText");
     const ConclusionCount = displayWordCount("Conclusion_InText");
    
 
     // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + HistoryCount + DevelopmentCount + ConclusionCount;
+    const totalWordCount = IntroductionCount + HistoryCount + SoftBodiedDevelopmentCount + ConclusionCount;
     // Display the total word count
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
