--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@ Mechanism and machine theory, 191, Available at: https://www.sciencedirect.com/s
        </pre>
   </p>
 
+<video src="video.svg" width="800" height="450" controls>
+</video>
+           
 <!-- Last commit time display -->
 <div id="last-updated">Loading last update time...</div>
 <!-- Verify Button -->
