--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Mechanism and machine theory, 191, Available at: https://www.sciencedirect.com/s
        </pre>
   </p>
 
-<video src="video.svg" width="800" height="450" controls>
+<video src="Conference project presentation compressed.mp4" width="800" height="450" controls>
 </video>
            
 <!-- Last commit time display -->
