--- a/index.html
+++ b/index.html
@@ -189,23 +189,26 @@ stages of development, soft bodied mechanisms create a massive potential for the
 <pre id="(Feng, J-C. et al, (2022))">-Feng, J-C. et al. (2022) 'Deep-sea organisms research orientated by deep-sea technologies development', Science bulletin, 67(17), p.1802-1816. 
 Available at: https://www-sciencedirect-com.surrey.idm.oclc.org/science/article/pii/S2095927322003000 (Accessed: 05/12/24).</a>
 
-      <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.frontiersin.org%2Fjournals%2Frobotics-and-ai%2Farticles%2F10.3389%2Ffrobt.2021.631371%2Ffull&psig=AOvVaw0kkTnwSiH5EsY3r-wBwe3r&ust=1733493343071000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOjX7IzkkIoDFQAAAAAdAAAAABAE">
+      <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.frontiersin.org%2Fjournals%2Frobotics-and-ai%2Farticles%2F10.3389%2Ffrobt.2021.631371%2Ffull&psig=AOvVaw0kkTnwSiH5EsY3r
+-wBwe3r&ust=1733493343071000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOjX7IzkkIoDFQAAAAAdAAAAABAE">
 <pre id="(Fin ray effect gripper designs (2024))">-Frontiers, Fin ray effect gripper designs (2021) Available at : https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.frontiersin.org
-%2Fjournals%2Frobotics-and-ai%2Farticles%2F10.3389%2Ffrobt.2021.631371%2Ffull&psig=AOvVaw0kkTnwSiH5EsY3r-wBwe3r&ust=1733493343071000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOjX7IzkkIoDFQAAAAAdAAAAABAE (Accessed: 05/12/24)</a>
+%2Fjournals%2Frobotics-and-ai%2Farticles%2F10.3389%2Ffrobt.2021.631371%2Ffull&psig=AOvVaw0kkTnwSiH5EsY3r-wBwe3r&ust=1733493343071000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCOjX7IzkkIoDFQAAAAAdAAAAABAE
+(Accessed: 05/12/24)</a>
         
       <a href="https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals">
 <pre id="(Guorui, L. Et al. (2023))">-Guorui, L. et al. (2023) 'Bioinspired soft robots for deap-sea exploration', Nature communications, 14(1),  
  Available at : https://www.proquest.com/docview/2885956000?pq-origsite=primo&sourcetype=Scholarly%20Journals (Accessed: 13/11/24) .</a>
 
       <a href="https://oceanbites.org/ocean-tech-using-robots-to-conduct-deep-sea-research/">
-<pre id="(Marranzino, 2017)">-Marranzino, A. (2017) OceanBites - Ocean tech: using robots to conduct deep-sea exploration. Available at: https://oceanbites.org/ocean-tech-using-robots-to-conduct-deep-sea-research/ (Accessed: 30/10/24).</a>
+<pre id="(Marranzino, 2017)">-Marranzino, A. (2017) OceanBites - Ocean tech: using robots to conduct deep-sea exploration. Available at: https://oceanbites.org/ocean-tech-using-robots-to-conduct-deep-sea-research/ 
+(Accessed: 30/10/24).</a>
 
       <a href="https://oceanexplorer.noaa.gov/world-oceans-day/reason-1.html">
 <pre id="(NOAA, 2024)">-National oceanic and atmospheric administration (2024) World-Oceans-Day. Available at: https://oceanexplorer.noaa.gov/world-oceans-day/reason-1.html (Accessed: 29/10/24).</a>
 
          <a href=" https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png">
-<pre id="(Bioinspired soft robots for deep-sea exploration, 2023)">-springernature (2023) 'Bioinspired soft robots for deep-sea exploration' Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png 
- (Accessed: 13/11/2024).</a>
+<pre id="(Bioinspired soft robots for deep-sea exploration, 2023)">-springernature (2023) 'Bioinspired soft robots for deep-sea exploration' 
+Available at: https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig5_HTML.png (Accessed: 13/11/2024).</a>
 
          <a href="https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-023-42882-3/MediaObjects/41467_2023_42882_Fig2_HTML.png?as=webp">
 <pre id="Bioinspired deep-sea soft actuation (2023)">-Springernature, Bio inspired deep-sea soft actuations (2023) Available at : 
